# wadachi

./: BRAND.md  CHANGELOG.md  README.md  pyproject.toml
assets/brand/: banner-github.html
demo/: app.js  index.html  styles.css
tests/: test_store.py  test_zz_graph7b.py  test_zz_sleep.py
wadachi/: __init__.py  graph.py  portability.py  search.py  server.py  store.py  web.py
wadachi/migrations/: 0001_baseline.py  __init__.py
